food and aboute me added

--- a/index.html
+++ b/index.html
@@ -15,17 +15,42 @@
 <body>
     <section>
         <div class="food-item">
-            <h1>Skip The Diet</h1>
-            <h1>Just Eat Heakthy</h1>
+            <h1><span class="header-color ">Skip</span> The Diet</h1>
+            <h1>Just Eat Heakthy,</h1>
             <h1>With Food Network</h1>
             <p>shodf sdifhs siudhfs siodfhso Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde corporis
                 deleniti architecto nesciunt, laborum perspiciatis repudiandae sapiente ut inventore hic asperiores
                 aliquid quae ipsam dolorum porro atque possimus incidunt officiis!
             </p>
-            <a href="https://github.com/">Order Food</a>
+            <a class="button" href="https://github.com/">Order Food</a>
         </div>
-        <div>
+        <div class="Food-image">
             <img src="images/vajitable.png" alt="">
+        </div>
+    </section>
+    <section class="bg-image">
+        <div class="About-me-image">
+            <img src="images/About-me.png" alt="">
+        </div>
+        <div class="food-item">
+            <h1>About Me</h1>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus doloremque placeat officia
+                necessitatibus quod, excepturi natus unde tenetur architecto, adipisci minus modi, impedit ipsam
+                nesciunt ut incidunt sit asperiores nemo?
+            </p>
+            <a class="button" href="https://github.com/">Contact me</a>
+        </div>
+    </section>
+    <section>
+        <div class="recipi">
+            <h1>My recipies</h1>
+            <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                Lorem Ipsum has been the industry's standard dummy text ever since the
+                1500s. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum iusto eaque architecto
+                excepturi saepe soluta harum repellat, est nesciunt aperiam animi dolor, perferendis ab fuga asperiores,
+                ut velit quas facere.
+            </p>
         </div>
     </section>
 </body>
