food item added

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 deleniti architecto nesciunt, laborum perspiciatis repudiandae sapiente ut inventore hic asperiores
                 aliquid quae ipsam dolorum porro atque possimus incidunt officiis!
             </p>
-            <a class="button" href="https://github.com/">Order Food</a>
+            <a class="button" target="_blank" href="https://github.com/">Order Food</a>
         </div>
         <div class="Food-image">
             <img src="images/vajitable.png" alt="">
@@ -38,7 +38,7 @@
                 necessitatibus quod, excepturi natus unde tenetur architecto, adipisci minus modi, impedit ipsam
                 nesciunt ut incidunt sit asperiores nemo?
             </p>
-            <a class="button" href="https://github.com/">Contact me</a>
+            <a class="button" target="_blank" href="https://github.com/">Contact me</a>
         </div>
     </section>
     <section>
@@ -50,6 +50,33 @@
                 1500s. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum iusto eaque architecto
                 excepturi saepe soluta harum repellat, est nesciunt aperiam animi dolor, perferendis ab fuga asperiores,
                 ut velit quas facere.
+            </p>
+        </div>
+    </section>
+    <section>
+        <div class="food1">
+            <img src="images/Project Cover7.png" alt="">
+            <h1>Recipie Title</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quod deleniti explicabo eveniet sapiente modi
+                iusto libero asperiores ea? Quos error facilis illo laboriosam quidem, eos sequi voluptates distinctio.
+                Est, eveniet.
+            </p>
+        </div>
+        <div class="food1">
+            <img src="images/Project Cover5.png" alt="">
+            <h1>Recipie Title</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus voluptatum, repellendus corporis
+                assumenda doloremque tenetur provident et inventore sapiente atque voluptate fuga dicta consequatur?
+                Beatae dicta pariatur explicabo iusto ullam?
+            </p>
+        </div>
+        <div class="food1">
+            <img src="images/Project Cover8.png" alt="">
+            <h1>Recipie Title</h1>
+            <p>Lorem ipsum dolor sit amet,
+                consectetur adipiscing elit. Lacus,
+                fermentum amet faucibus sed id nisi
+                lectus at.
             </p>
         </div>
     </section>
