--- a/index.html
+++ b/index.html
@@ -76,10 +76,17 @@
             <p>Lorem ipsum dolor sit amet,
                 consectetur adipiscing elit. Lacus,
                 fermentum amet faucibus sed id nisi
-                lectus at.
+                lectus at. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum totam, adipisci molestiae
+                labore reprehenderit impedit magnam
             </p>
         </div>
     </section>
+    <footer class="fotter-style">
+        <div>
+            <h1>Food Home</h1>
+            <p>Eat healthy to live healthy. Live healthy to live happy</p>
+        </div>
+    </footer>
 </body>
 
 </html>
