--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 </head>
 
 <body>
+    <header>
+        <h1 class="Food-home">FOOD HOME</h1>
+    </header>
     <section>
         <div class="food-item">
             <h1><span class="header-color ">Skip</span> The Diet</h1>
@@ -22,7 +25,7 @@
                 deleniti architecto nesciunt, laborum perspiciatis repudiandae sapiente ut inventore hic asperiores
                 aliquid quae ipsam dolorum porro atque possimus incidunt officiis!
             </p>
-            <a class="button" target="_blank" href="https://github.com/">Order Food</a>
+            <a class="button" target="_blank" href="https://github.com/Kader517777/">Order Food</a>
         </div>
         <div class="Food-image">
             <img src="images/vajitable.png" alt="">
@@ -34,50 +37,53 @@
         </div>
         <div class="food-item">
             <h1>About Me</h1>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus doloremque placeat officia
-                necessitatibus quod, excepturi natus unde tenetur architecto, adipisci minus modi, impedit ipsam
-                nesciunt ut incidunt sit asperiores nemo?
+            <p>
+                A. T. Haque Ltd, Agricultural Marketing Co. Ltd, Agro Organica (Pvt) Limited, Akij Agro Processing
+                Factory, Akij Food & Beverage Ltd, Alin Food Products Ltd, Alin Foods Trade, Pranto Traders (Alin
+                Group), AST Beverage Ltd, Ayurvedia Pharmacy (Dacca) Ltd. (AP Foods), Banga Millers Limited, Bengal Meat
+                Processing Industries Limited, Bombay Sweets & Co. Ltd, Danish Condensed Milk Bangladesh Ltd, Danish
+                Foods Ltd, Deshbandhu Food & Beverage Ltd., Deshbandhu Sugar Mills Ltd, Elson Foods (BD) Ltd, Globe
+                Biscuits & Dairy Milk Ltd, Globe Soft Drinks Ltd, Habiganj Agro Limited. (PRAN group), Hashem Agro
+                Processing Ltd. (Sajeeb group), Hashem Foods Ltd.
             </p>
-            <a class="button" target="_blank" href="https://github.com/">Contact me</a>
+            <a class="button" target="_blank" href="https://github.com/Kader517777/">Contact me</a>
         </div>
     </section>
     <section>
         <div class="recipi">
             <h1>My recipies</h1>
             <p>
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                Lorem Ipsum has been the industry's standard dummy text ever since the
-                1500s. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum iusto eaque architecto
-                excepturi saepe soluta harum repellat, est nesciunt aperiam animi dolor, perferendis ab fuga asperiores,
-                ut velit quas facere.
+                Sure, you've probably been to the McDonald's drive-thru at least once in your life. And you may have
+                tried delicacies from Wendy's and Burger King, too. But have you tried every must-have fast-food item
+                out there?
+                We've rounded up some of the most popular—and most delicious—fast-food items that everyone should try at
+                least once (barring food restrictions, of course). Get ready for some major drive-thru inspiration.
             </p>
         </div>
     </section>
     <section>
         <div class="food1">
             <img src="images/Project Cover7.png" alt="">
-            <h1>Recipie Title</h1>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quod deleniti explicabo eveniet sapiente modi
-                iusto libero asperiores ea? Quos error facilis illo laboriosam quidem, eos sequi voluptates distinctio.
-                Est, eveniet.
+            <h1>KFC Popcorn Chicken Nuggets</h1>
+            <p>If you take one of the most popular fast-food recipes and make it conveniently bite-sized, ta-da! You
+                have another hit on your hands.
             </p>
         </div>
         <div class="food1">
             <img src="images/Project Cover5.png" alt="">
-            <h1>Recipie Title</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus voluptatum, repellendus corporis
-                assumenda doloremque tenetur provident et inventore sapiente atque voluptate fuga dicta consequatur?
-                Beatae dicta pariatur explicabo iusto ullam?
+            <h1> Burger King Chicken Fries</h1>
+            <p>The Burger King Chicken Fries had a dramatic start. They were first offered as a novelty item in 2005,
+                and according to USA Today, when they were pulled from the menu, fans started a Change.org petition and
+                various social media campaigns to get them back in circulation. In 2014, Burger King decided to make
+                them a permanent fixture on the menu.
             </p>
         </div>
         <div class="food1">
             <img src="images/Project Cover8.png" alt="">
-            <h1>Recipie Title</h1>
-            <p>Lorem ipsum dolor sit amet,
-                consectetur adipiscing elit. Lacus,
-                fermentum amet faucibus sed id nisi
-                lectus at. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum totam, adipisci molestiae
-                labore reprehenderit impedit magnam
+            <h1>Long John Silver's Two-Piece Fish Meal</h1>
+            <p>This fried combo features Alaskan Pollock, along with two sides and hushpuppies. If you're not into fried
+                fish, some other popular items at the chain are the grilled salmon and shrimp tacos, along with a shrimp
+                variety platter.
             </p>
         </div>
     </section>
